--- a/murskadekla/templates/base.html
+++ b/murskadekla/templates/base.html
@@ -26,6 +26,8 @@
     <link rel="stylesheet" href="{% static 'css/cookiealert.css' %}">
     <link rel="stylesheet" href="{% static 'css/legalage.css' %}">
     <link rel="stylesheet" href="{% static 'css/drinks.css' %}">
+    <link rel="stylesheet" href="{% static 'css/index.css' %}">
+    <link rel="stylesheet" href="{% static 'css/plant_a_tree.css' %}">
     {% if anchor %}
         <script type="text/javascript">
         $(document).ready(function () {
