--- a/murskadekla/templates/drinks.html
+++ b/murskadekla/templates/drinks.html
@@ -17,7 +17,7 @@
                     <p id="bramble_recipe" class="md-cocktail-recipe bottom">Murska Dekla Gin 40ml<br>Sugar Syrup 10ml<br>Fresh Lemon Juice 20ml<br>Crème De Cassis 20ml</p>
                 </div>
                 <div class="md-coctail-container"><img id="gin_cup_image" class="md-drinks-image" src="{% static 'img/gin_cup.jpg' %}">
-                    <p class="md-cocktail-name"><strong>GIN</strong>&nbsp;CUP<br><a href="https://www.facebook.com/cocktailsbyshankeri">@shankeri</a><br></p>
+                    <p class="md-cocktail-name"><strong>GIN&nbsp;CUP</strong><br><a href="https://www.facebook.com/cocktailsbyshankeri">@shankeri</a><br></p>
                     <p id="gin_cup_recipe" class="md-cocktail-recipe bottom">Murska Dekla Gin 30ml<br>Pimm's 20ml<br>Ginger Ale 100ml<br>Seasons Fruit<br></p>
                 </div>
             </div>
