--- a/murskadekla/templates/navbar.html
+++ b/murskadekla/templates/navbar.html
@@ -22,7 +22,7 @@
                     <a class="nav-link" id="drinks" href="{% url  'public:drinks' %}"><strong>DRINKS</strong></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" id="plant_a_tree"><strong>PLANT A TREE</strong></a>
+                    <a class="nav-link" id="plant_a_tree" href="{% url  'plantatree:plant_a_tree' %}"><strong>PLANT A TREE</strong></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" id="contact" href="{% url  'public:contact' %}"><strong>CONTACT</strong></a>
