--- a/murskadekla/templates/our_story.html
+++ b/murskadekla/templates/our_story.html
@@ -11,11 +11,8 @@
         <div class="our_story row">
             <div class="our_story image_container"></div>
             <div class="our_story text_container">
-                <p id="our_story_text">In early 2019, Blazar distillery was founded in the Croatian region of Medimurje, in a small picturesque town of Prekopa. In the end of 2019, the combination of enthusiasm, curiosity and persistence of the three founding friends resulted
-                    in the release of a unique gin on the young Croatian craft spirits scene, Murska Dekla London dry gin. Using traditional copper pot stills, we produce our spirits manually in small batches. Each bottle is produced with equal care.<br></p>
-                <p
-                    id="our_story_text">In addition to the commitment to traditional distillation techniques, using local origin ingredients is an essential guiding principle in our production process. We take great care to only use organically grown herbs and spices. With a
-                    carefully selected mix of ingredients and an exclusive recipe, our spirits gain a full taste and first-class quality that we are proud of.</p>
+                <p id="our_story_text">In the heart of a small hilly region in the north of Croatia, somewhere between forests, fields and streams, the magic of natural remedies turns into a unique elixir: the craft gin of Murska Dekla. This mystic creature from Međimurje, the spirit of water and the goddess of nature, Murska Dekla treasures a secret of nature, a special recipe that distills a wealth of herbs.<br></p>
+                <p id="our_story_text">Using the traditional distilling techniques of our ancestors, we produce small batches of exquisite spirits. From the traditional copper pot stills, through the crystal clean water, carefully selected mix of herbs and spices, and aromatic oak barrels, each bottle of our gin gains a full taste and first-class quality that we are proud of. </p>
             </div>
         </div>
     </section>
