--- a/murskadekla/templates/products.html
+++ b/murskadekla/templates/products.html
@@ -46,14 +46,12 @@
                 </div>
             </div>
             <div class="md-product-text">
-                <p class="heading" style="background-image: url({% static 'img/line_top_black.svg' %});"><strong>LONDON DRY GIN 42% ABV</strong></p>
-                <p class="content">Murska Dekla London dry gin is the first gin in the family named after a mystic creature from Međimurje, a fairy, a spirit of water and goddess of nature. Like its namesake fairy, our gin carries the secrets of nature, the secret recipe
-                    that distills a wealth of herbs.</p>
+                <p class="heading" style="background-image: url({% static 'img/line_top.svg' %});"><strong>LONDON DRY GIN 42% ABV</strong></p>
+                <p class="content">Murska Dekla London dry gin is the first gin in the family named after a mystic creature from the old folk legends. Like its namesake goddess of nature, Murska Dekla gin treasures only the best of nature's herbs and spices.</p>
                 <div class="second_divider" style="background-image: url({% static 'img/split_line.svg' %});"></div>
-                <p class="content">In the creation of this drink, we took great care in picking ingredients of local and organic origin. Only the best of nature’s gifts was extracted through traditional distillation in copper pot stills. Finally, we were rewarded with a
-                    first-class London dry of supreme taste. Enjoy it mixed with tonic water, in one of our exclusive cocktails, or simply on rocks.<br></p>
+                <p class="content">The character of this playful forest spirit, coquettishly sweet and spicy, is carefully planted in the refreshing citrus body of a refined first-class London dry. Enjoy the supreme taste of this aromatic gin mixed with tonic water, with a slice of lime, or simply, on rocks.<br></p>
                 <div class="md-awards">
-                    <img class="award-image" src="{% static 'img/md-ldg-2020-silver91.png' %}">
+                    <img class="award-image first" src="{% static 'img/md-ldg-2020-silver91.png' %}">
                 </div>
             </div>
         </div>
@@ -96,23 +94,23 @@
                     <p>Vine leaf</p>
                 </div>
                 <div class="md-product-herb">
-                    <img src="{% static 'img/loza.png' %}">
+                    <img src="{% static 'img/kamilica.png' %}">
                     <p>Parsley leaf</p>
                 </div>
                 <div class="md-product-herb">
-                    <img src="{% static 'img/loza.png' %}">
+                    <img src="{% static 'img/persin.png' %}">
                     <p>Chamomile</p>
                 </div>
             </div>
             <div class="md-product-text">
-                <p class="heading" style="background-image: url({% static 'img/line_top_black.svg' %});"><strong>OLD TOM GIN 48% ABV</strong></p>
+                <p class="heading" style="background-image: url({% static 'img/line_top.svg' %});"><strong>OLD TOM GIN 48% ABV</strong></p>
                 <p class="content">Murska Dekla London dry gin is the first gin in the family named after a mystic creature from Međimurje, a fairy, a spirit of water and goddess of nature. Like its namesake fairy, our gin carries the secrets of nature, the secret recipe
                     that distills a wealth of herbs.</p>
                 <div class="second_divider" style="background-image: url({% static 'img/split_line.svg' %});"></div>
                 <p class="content">In the creation of this drink, we took great care in picking ingredients of local and organic origin. Only the best of nature’s gifts was extracted through traditional distillation in copper pot stills. Finally, we were rewarded with a
                     first-class London dry of supreme taste. Enjoy it mixed with tonic water, in one of our exclusive cocktails, or simply on rocks.<br></p>
                 <div class="md-awards">
-                    <img class="award-image" src="{% static 'img/md-ldg-2020-silver91.png' %}">
+                    <img class="award-image first" src="{% static 'img/md-ldg-2020-silver91.png' %}">
                 </div>
             </div>
         </div>
